# amore_vision

./: README.md  requirements.txt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/amore_vision/: NED_acoustic.h  NED_objects.h  NED_poses.h  ang_mag.h  buoy.h  cluster.h  cluster_list.h  control_efforts.h  depth_points.h  distances.h  grid_point.h  look_up_table.h  propulsion_system.h  state.h  to_cam.h  usv_pose.h  vision.h
devel/include/yolov7_ros/: ObjectTracking2D.h  ObjectTracking2DArray.h
devel/include/zed_interfaces/: BoundingBox2Df.h  BoundingBox2Di.h  BoundingBox3D.h  Keypoint2Df.h  Keypoint2Di.h  Keypoint3D.h  Object.h  ObjectsStamped.h  PlaneStamped.h  RGBDSensors.h  Skeleton2D.h  Skeleton3D.h  reset_odometryRequest.h  reset_odometryResponse.h  reset_trackingRequest.h  reset_trackingResponse.h  save_3d_mapRequest.h  save_3d_mapResponse.h  save_area_memoryRequest.h  save_area_memoryResponse.h  set_led_statusRequest.h  set_led_statusResponse.h  set_poseRequest.h  set_poseResponse.h  start_3d_mappingRequest.h  start_3d_mappingResponse.h  start_object_detectionRequest.h  start_object_detectionResponse.h  start_remote_streamRequest.h  start_remote_streamResponse.h  start_svo_recordingRequest.h  start_svo_recordingResponse.h  stop_3d_mappingRequest.h  stop_3d_mappingResponse.h  stop_object_detectionRequest.h  stop_object_detectionResponse.h  stop_remote_streamRequest.h  stop_remote_streamResponse.h  stop_svo_recordingRequest.h  stop_svo_recordingResponse.h  (+2 more)
devel/include/zed_nodelets/: ZedConfig.h
devel/lib/amore_vision/: PCL_TEST  Ransac  Statistical_Outlier  Voxel_Grid  cylinder  tf_broadcast  transform_3d
devel/lib/pkgconfig/: amore_vision.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pcl.pc  velodyne_pointcloud.pc  yolov7_ros.pc  zed_interfaces.pc  zed_nodelets.pc  zed_wrapper.pc
devel/lib/velodyne_driver/: velodyne_node
devel/lib/velodyne_laserscan/: velodyne_laserscan_node
devel/lib/velodyne_pointcloud/: transform_node
devel/share/amore_vision/cmake/: amore_vision-msg-extras.cmake  amore_vision-msg-paths.cmake  amore_visionConfig.cmake
devel/share/velodyne_driver/cmake/: velodyne_driverConfig.cmake
devel/share/velodyne_laserscan/cmake/: velodyne_laserscanConfig.cmake
devel/share/velodyne_msgs/cmake/: velodyne_msgs-msg-extras.cmake  velodyne_msgs-msg-paths.cmake  velodyne_msgsConfig.cmake
devel/share/velodyne_pcl/cmake/: velodyne_pclConfig.cmake
src/amore_vision/: CMakeLists.txt  README.md  package.xml
src/amore_vision/launch/: FAU_Vision.launch  Roboboat_vision.launch  Vision (copy).launch  Vision.launch  amore_vision.launch  cyl_FAU_Vision.launch  rosbag_vision.launch  test_FAU_Vision.launch  vrx_test_launch.launch
src/amore_vision/msg/: ang_mag.msg  buoy.msg  cluster.msg  cluster_list.msg  depth_points.msg  grid_point.msg  look_up_table.msg  to_cam.msg  vision.msg
src/amore_vision/src/: PCL_TEST.cpp  Ransac.cpp  Statistical_Outlier.cpp  Voxel_Grid.cpp  cylinder.cpp  scan.py  tf_broadcast.cpp  transform_3d.cpp  vision.py.save  vision_4_15_23.py
src/yolov11/: newVision.py  yoloVision.ipynb  yolovsion.py  zed.ipynb
(+108 files in other folders)
